--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,2 +1,14 @@
-<app-header class="header-top"></app-header>
-<router-outlet class="under-header"></router-outlet>
+<!--<app-header class="header-top"></app-header>
+<router-outlet class="under-header"></router-outlet>-->
+<!-- nav -->
+<nav class="navbar navbar-expand navbar-dark bg-dark" *ngIf="currentUser">
+  <div class="navbar-nav">
+    <a class="nav-item nav-link" routerLink="/">Home</a>
+    <a class="nav-item nav-link" (click)="logout()">Logout</a>
+  </div>
+</nav>
+
+<!-- main app container -->
+<div class="container">
+  <router-outlet></router-outlet>
+</div>
