--- a/ui/src/app/components/account/acount-list/acount-list.component.css
+++ b/ui/src/app/components/account/acount-list/acount-list.component.css
@@ -1,3 +1,4 @@
+/*
 .container-table{
   padding-top: 20px;
   padding-right: 10px;
@@ -24,3 +25,4 @@
   background-attachment: fixed;
   text-align: center;
 }
+*/
