Security offically works, i guarentee it!

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,2 +1,2 @@
-<!--<app-header class="header-top"></app-header>-->
+<app-header class="header-top"></app-header>
 <router-outlet class="under-header"></router-outlet>
