--- a/ui/src/app/components/header/header.component.html
+++ b/ui/src/app/components/header/header.component.html
@@ -1,37 +1,25 @@
-<div class="header-wrapper">
-  <ul class="header-bar">
-    <li class="logo">
-      <div style="left:-30px;" class="store_logo">
-        <img src="https://cdn2.iconfinder.com/data/icons/logistics-delivery-glyphs-vol-2/52/cart__shop__shopping__pushcart__trolley__carrier__carry-512.png"
-             alt="store-logo"
-             id="store-logo"
-             width
-               ="45"
-             height
-               ="45"
-             [routerLink]="['']">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand">General Store</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a>My Account</a></li>
+      <li><a>Cart</a></li>
+    </ul>
+    <form class="navbar-form navbar-left">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" name="search">
+        <div class="input-group-btn">
+          <button class="btn btn-default" type="submit">
+            <i class="glyphicon glyphicon-search"></i>
+          </button>
+        </div>
       </div>
-    </li>
-<!--    <li class="product-dropdown" style="font-weight: bold; margin-left: 30px; padding-bottom:0 ">
-      <div class="dropdown-content">
-        <a [routerLink]="['dining-place/create']" class="create-product-link">Create</a>
-        <a [routerLink]="['product-list/product']" class="get-all-dining-link">All</a>
-      </div>
-    </li>
-    <li class="account-dropdown" style="font-weight: bold; margin-left: 30px; padding-bottom:0 ">
-      <button class="dropdown-acc-btn" style="font-weight: bold;">
-        Accounts
-      </button>
-      <div class="dropdown-acc-content">
-        <a [routerLink]="['account/create']" class="create-acc-link">Create</a>
-        <a [routerLink]="['account/account-list']" class="get-all-acc-link">All</a>
-      </div>
-    </li>-->
-    <li style="float:right">
-      <a class="sign-up-link">Sign Up</a>
-    </li>
-    <li style="float:right">
-      <a class="login-link">Login</a>
-    </li>
-  </ul>
-</div>
+    </form>
+  </div>
+</nav>
