--- a/ui/src/app/components/account/create-account/create-account.component.html
+++ b/ui/src/app/components/account/create-account/create-account.component.html
@@ -1,45 +1,54 @@
-<div class="site-wrapper">
-  <div class="text-wrapper">
-    <br>
-    <div class="title" style="text-align:center">
-      <h1>
-        Create Account
-      </h1>
-    </div>
-    <div class="container-form">
-      <form [formGroup]="accountForm" (ngSubmit)="submitRegistration()" novalidate>
-        <div *ngIf="validMessage != ''">
-          <h3 class="has-info">{{validMessage}}</h3>
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
+
+<div class="container">
+  <div class="row">
+    <div class="modal-content">
+
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
+        <h4 class="modal-title">Ready to Join? Create a New Account</h4>
+      </div>
+
+      <form action="" method="post">
+        <div class="modal-body">
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="text" class="form-control" required="" name="userEmail" value="">
+            <span class="help-block">Your email address is also used to log in. Needs to be unique</span>
+          </div>
+          <div class="form-group">
+            <label for="name">Name</label>
+            <input type="text" class="form-control" required="" name="name" value="">
+            <span class="help-block">This will be your name</span>
+          </div>
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" class="form-control" required="" name="password" value="">
+                <span class="help-block">Choose a password for your new account. Must contain capital letter and number</span>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="password">Repeat Password</label>
+                <input type="password" class="form-control" required="" name="passwordr" value="">
+                <span class="help-block">Type the password again. Passwords must match.</span>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="form-group">
-          <label>Name</label>
-          <input type="text" class="form-control" formControlName="name" required autofocus/>
+
+        <div class="modal-footer">
+          <input type="hidden" name="isEmpty" value="">
+          <button type="input" name="submit" value="newAccount" class="btn btn-success btn-icon"><i class="fa fa-check"></i> Create My Account</button>
+          <button type="button" class="btn btn-default btn-icon" data-dismiss="modal"><i class="fa fa-times-circle"></i> Cancel</button>
         </div>
-        <div class="form-group">
-          <label>Email</label>
-          <input type="text" class="form-control" formControlName="email" required/>
-        </div>
-        <div class="form-group">
-          <label>Password</label>
-          <input type="text" class="form-control" formControlName="password" required/>
-        </div>
-        <div class="form-group">
-          <label>Password Again</label>
-          <input type="text" class="form-control" formControlName="passwordAgain" required/>
-        </div>
-        <div class="form-group">
-         <!-- <form [formGroup]="accountTypeForm" (ngSubmit)="submitRegistration()" novalidate>
-            <label>Account Type</label>
-              <select class="form-control" formControlName="accountType" [(ngModel)]="accountTypeID">
-                <option *ngFor="let accountType of accountTypes" value="[{{accountType.id}}]">
-                  {{accountType.name}}
-                </option>
-              </select>
-          </form>-->
-        </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
+
     </div>
   </div>
 </div>
-
