--- a/ui/src/app/components/header/header.component.html
+++ b/ui/src/app/components/header/header.component.html
@@ -5,11 +5,11 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand">General Store</a>
+      <a class="navbar-brand" [routerLink]="['']">General Store</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a>My Account</a></li>
-      <li><a>Cart</a></li>
+      <li><a [routerLink]="['login']">My Account</a></li> <!--todo fix routes-->
+      <li><a [routerLink]="['dining-place/create']">Cart</a></li>
     </ul>
     <form class="navbar-form navbar-left">
       <div class="input-group">
