--- a/ui/src/app/components/account/create-account/create-account.component.html
+++ b/ui/src/app/components/account/create-account/create-account.component.html
@@ -9,12 +9,12 @@
 
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><i class="fa fa-times"></i></button>
-        <h4 class="modal-title">Ready to Join? Create a New Account</h4>
+        <h4 class="modal-title">{{validMessage}}</h4>
       </div>
 
-      <form action="" method="post">
+      <form [formGroup]="form_signup" (ngSubmit)="submitRegistration()">
         <div class="modal-body">
-          <div class="form-group" [formGroup]="form_signup" (ngSubmit)="submitRegistration()">
+          <div class="form-group" >
             <label>Email Address</label>
             <input type="text" class="form-control" required="" name="userEmail" value="" formControlName="email">
             <span class="help-block">Your email address is also used to log in. Needs to be unique</span>
@@ -40,7 +40,7 @@
             <div class="col-md-6">
               <div class="form-group">
                 <label >Repeat Password</label>
-                <input type="password" class="form-control" required="" name="passwordr" value="" formControlName="password_repeat">
+                <input type="password" class="form-control" required="" name="passwordr" value="" formControlName="passwordAgain">
                 <span class="help-block">Type the password again. Passwords must match.</span>
               </div>
             </div>
@@ -50,7 +50,7 @@
         <div class="modal-footer">
           <input type="hidden" name="isEmpty" value="">
           <button type="input" name="submit" value="newAccount" class="btn btn-success btn-icon"><i class="fa fa-check"></i> Create My Account</button>
-          <button type="button" class="btn btn-default btn-icon" data-dismiss="modal"><i class="fa fa-times-circle" [routerLink]="['/login']"></i> Cancel</button>
+          <button type="button" class="btn btn-default btn-icon" data-dismiss="modal" (click)="navigateCancel()"> Cancel</button>
         </div>
       </form>
 
