header works with login or not logged in, added log out

--- a/ui/src/app/components/account/account-view/account-view.component.html
+++ b/ui/src/app/components/account/account-view/account-view.component.html
@@ -3,28 +3,21 @@
     <br>
     <div class="title" style="text-align:center">
       <h1>
-        {{account.firstName}} {{account.lastName}}
+        {{account.name}}
       </h1>
     </div>
     <div class="table-wrapper">
-      <div class="form-group">
-        <label>Account Type: </label>
-        <div class="form-control">{{account.accountType.name}}</div>
-      </div>
       <div class="form-group">
         <label>Email: </label>
         <div class="form-control">{{account.email}}</div>
       </div>
     </div>
     <div class="btn-wrapper">
-      <button class="btnz delete-btn" (click)="deleteAccount()" routerLink="/account/account-list">
-        <a>Delete</a>
+      <button class="btnz delete-btn" (click)="logout()">
+        <a>Log out</a>
       </button>
       <button class="btnz update-btn">
-        <a>Update</a>
-      </button>
-      <button class="btnz back-btn-wrapper" routerLink="/account/account-list">
-        <a class="btn-back">Back to List</a>
+        <a>Edit(cur not working- to be made working)</a>
       </button>
     </div>
   </div>
