--- a/ui/src/app/components/account/account-view/account-view.component.css
+++ b/ui/src/app/components/account/account-view/account-view.component.css
@@ -1,4 +1,3 @@
-/*
 .table-wrapper{
   padding-top: 20px;
   padding-right: 10px;
@@ -34,7 +33,7 @@
   padding-bottom: 10px;
 }
 .btnz{
-  background-color: #4CAF50; !* Green *!
+  background-color: #4CAF50; /* Green */
   border: none;
   color: white;
   padding: 16px 32px;
@@ -71,4 +70,3 @@
   border: 2px solid darkblue;
 }
 
-*/
