--- a/ui/src/app/components/header/header.component.html
+++ b/ui/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
       <a class="navbar-brand" [routerLink]="['']">General Store</a>
     </div>
     <ul class="nav navbar-nav">
-      <li><a [routerLink]="['login']">My Account</a></li> <!--todo fix routes-->
+      <li><a (click)="isUserLoggedIn()">My Account</a></li>
       <li><a [routerLink]="['dining-place/create']">Cart</a></li>
     </ul>
     <form class="navbar-form navbar-left">
