Added Cart int Db, made product view and list in frontend.

--- a/ui/src/app/app.component.html
+++ b/ui/src/app/app.component.html
@@ -1,2 +1,9 @@
-<app-header class="header-top"></app-header>
+<app-header class="header-top" style="  position: fixed;
+  top: 0;
+  width: 100%;
+ z-index: 1;"></app-header>
+<app-catagory
+  style="  position: fixed;
+  top: 50px;
+  height: 100%;"></app-catagory>
 <router-outlet class="under-header"></router-outlet>
