Cart now works, making connections in front end

--- a/ui/src/app/components/catagory/catagory.component.html
+++ b/ui/src/app/components/catagory/catagory.component.html
@@ -10,16 +10,16 @@
       </li>
     </ul>
     <ul class="sidebar-nav" id="sidebar">
-      <li><a>IT<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Photography<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Electrical Appliances<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Clothes<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Health and Care<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Books<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Toys<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Sport<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Food<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
-      <li><a>Other<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/IT']"><a>IT<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Photography']"><a>Photography<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Electrical Appliances']"><a>Electrical Appliances<span class="sub_icon glyphicon glyphicon-link" ></span></a></li>
+      <li [routerLink]="['/product-list/Clothes']"><a>Clothes<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Health and Care']"><a>Health and Care<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Books']"><a>Books<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Toys']"><a>Toys<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Sport']"><a>Sport<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Food']"><a>Food<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
+      <li [routerLink]="['/product-list/Other']"><a>Other<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
     </ul>
   </div>
 
