--- a/ui/src/app/components/product/product-list/product-list.component.html
+++ b/ui/src/app/components/product/product-list/product-list.component.html
@@ -10,17 +10,17 @@
         </div>
         <div class="product-desc">
                     <span class="product-price">
-                        {{product.price}}.00
+                        {{product.price}}
                     </span>
           <small class="text-muted">Category: {{product.category.name}}</small>
-          <a href="#" class="product-name"> {{product.name}}</a>
+          <a class="product-name" [routerLink]="['/product/' + product.productId]"> {{product.name}}</a>
 
           <div class="small m-t-xs">
             {{product.description}}
           </div>
           <div class="m-t text-righ">
 
-            <a href="#" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+            <a [routerLink]="['/product/',product.productId]" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
           </div>
         </div>
       </div>
