--- a/ui/src/app/components/product/view-product/view-product.component.html
+++ b/ui/src/app/components/product/view-product/view-product.component.html
@@ -49,7 +49,9 @@
             </div> <!-- col.// -->
           </div> <!-- row.// -->
           <hr>
-          <a href="#" class="btn btn-lg btn-primary text-uppercase"> Add to cart </a>
+
+
+          <a href="#" class="btn btn-lg btn-primary text-uppercase">Buy </a>
         </article> <!-- card-body.// -->
       </aside> <!-- col.// -->
     </div> <!-- row.// -->
