--- a/ui/src/app/components/product/view-product/view-product.component.html
+++ b/ui/src/app/components/product/view-product/view-product.component.html
@@ -32,7 +32,7 @@
               <dl class="param param-inline">
                 <dt>Quantity: </dt>
                 <dd>
-                  <select class="form-control form-control-sm" style="width:70px;">
+                  <select class="form-control form-control-sm" style="width:70px;" [(ngModel)]="selectOption">
                     <option> 1 </option>
                     <option> 2 </option>
                     <option> 3 </option>
@@ -49,9 +49,7 @@
             </div> <!-- col.// -->
           </div> <!-- row.// -->
           <hr>
-
-
-          <a href="#" class="btn btn-lg btn-primary text-uppercase">Buy </a>
+          <a (click)="addProductToCart()" class="btn btn-lg btn-primary text-uppercase">Add to Cart </a>
         </article> <!-- card-body.// -->
       </aside> <!-- col.// -->
     </div> <!-- row.// -->
