need to fix images, make trash icon work, and check out work

--- a/ui/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/ui/src/app/components/shopping-cart/shopping-cart.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="panel-body">
           <div class="row" *ngFor="let item of cartList">
-            <div class="col-xs-2"><img class="img-responsive" src="http://placehold.it/100x70">
+            <div class="col-xs-2"><img class="img-responsive" src="https://cdn3.iconfinder.com/data/icons/cat-pattern-colored/94/cat17-512.png">
             </div>
             <div class="col-xs-4">
               <h4 class="product-name" (click)="getProduct(item) "><strong>{{item.product.name}}</strong></h4>
@@ -37,7 +37,7 @@
               </div>
               <div class="col-xs-2">
                 <button type="button" class="btn btn-link btn-xs">
-                  <span class="glyphicon glyphicon-trash"> </span>
+                  <span class="glyphicon glyphicon-trash" (click)="deleteItem(item)"> </span>
                 </button>
               </div>
             </div>
@@ -51,6 +51,11 @@
             <div class="col-xs-3">
               <button type="button" class="btn btn-success btn-block">
                 Checkout
+              </button>
+            </div>
+            <div class="col-xs-3">
+              <button type="button" class="btn btn-success btn-block" (click)="refresh()">
+                Refresh Cart
               </button>
             </div>
           </div>
