Checkout works,added thank you component. Need to start working on interface as employee

--- a/ui/src/app/components/checkout/checkout.component.html
+++ b/ui/src/app/components/checkout/checkout.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <div class="row cart-body">
-    <form class="form-horizontal" method="post" action="">
+    <div class="form-horizontal" method="post" action="">
       <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 col-md-push-6 col-sm-push-6">
         <!--REVIEW ORDER-->
         <div class="panel panel-info">
@@ -141,35 +141,30 @@
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
                 <select class="form-control" name="" [(ngModel)]="expirationMonth">
-                  <option value="">Month</option>
-                  <option value="01">01</option>
-                  <option value="02">02</option>
-                  <option value="03">03</option>
-                  <option value="04">04</option>
-                  <option value="05">05</option>
-                  <option value="06">06</option>
-                  <option value="07">07</option>
-                  <option value="08">08</option>
-                  <option value="09">09</option>
-                  <option value="10">10</option>
-                  <option value="11">11</option>
-                  <option value="12">12</option>
+                  <option> Month </option>
+                  <option> 01 </option>
+                  <option> 02 </option>
+                  <option> 03 </option>
+                  <option> 04 </option>
+                  <option> 05 </option>
+                  <option> 06 </option>
+                  <option> 07 </option>
+                  <option> 08 </option>
+                  <option> 09 </option>
+                  <option> 10 </option>
+                  <option> 11 </option>
+                  <option> 12 </option>
                 </select>
               </div>
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                <select class="form-control" name="" [(ngModel)]="expirationYear">
-                  <option value="">Year</option>
-                  <option value="2015">2015</option>
-                  <option value="2016">2016</option>
-                  <option value="2017">2017</option>
-                  <option value="2018">2018</option>
-                  <option value="2019">2019</option>
-                  <option value="2020">2020</option>
-                  <option value="2021">2021</option>
-                  <option value="2022">2022</option>
-                  <option value="2023">2023</option>
-                  <option value="2024">2024</option>
-                  <option value="2025">2025</option>
+                <select class="form-control" name=""  [(ngModel)]="expirationYear">
+                  <option> Year </option>
+                  <option> 2020 </option>
+                  <option> 2021 </option>
+                  <option> 2022 </option>
+                  <option> 2023 </option>
+                  <option> 2024 </option>
+                  <option> 2025 </option>
                 </select>
               </div>
             </div>
@@ -188,7 +183,7 @@
             </div>
             <div class="form-group">
               <div class="col-md-6 col-sm-6 col-xs-12">
-                <button type="submit" class="btn btn-primary btn-submit-fix">Place Order</button>
+                <button type="submit" class="btn btn-primary btn-submit-fix" (click)="placeorder()">Place Order</button>
               </div>
             </div>
           </div>
@@ -196,7 +191,7 @@
         <!--CREDIT CART PAYMENT END-->
       </div>
 
-    </form>
+    </div>
   </div>
   <div class="row cart-footer">
 
