--- a/ui/src/app/components/shopping-cart/shopping-cart.component.html
+++ b/ui/src/app/components/shopping-cart/shopping-cart.component.html
@@ -49,7 +49,7 @@
               <h4 class="text-right">Total <strong>{{sum}}</strong></h4>
             </div>
             <div class="col-xs-3">
-              <button type="button" class="btn btn-success btn-block">
+              <button type="button" class="btn btn-success btn-block" [routerLink]="['/checkout']">
                 Checkout
               </button>
             </div>
