Added get items with 0 quantity, and other stuff like, added Campain, list, edit, create. and other stuff i frogot, oh search list by keyword

--- a/ui/src/app/components/account/acount-list/acount-list.component.html
+++ b/ui/src/app/components/account/acount-list/acount-list.component.html
@@ -6,15 +6,7 @@
         {{ title }}
       </h1>
     </div>
-    <div>Filter by:</div>
-    <div class="filter-input">
-      <input type="text" [(ngModel)]="listFilter">
-    </div>
-    <div>
-      <div>
-        <h4> Filtered by: {{listFilter}}</h4>
-      </div>
-    </div>
+    <br>(click on account name to edit)
     <div class="container-table"
          *ngIf="accounts && accounts.length">
       <table class="table table-bordered table-inverse">
