--- a/ui/src/app/components/campaign/create-campaign/create-campaign.component.html
+++ b/ui/src/app/components/campaign/create-campaign/create-campaign.component.html
@@ -1,1 +1,35 @@
-<p>create-campaign works!</p>
+<div class="site-wrapper">
+  <div class="text-wrapper">
+    <br>
+    <div class="title" style="text-align:center">
+      <h1>
+        Create Campaign
+      </h1>
+    </div>
+    <div class="container-form">
+      <form [formGroup]="campaignFormGroup" (ngSubmit)="submitRegistration()" novalidate>
+        <div *ngIf="validMessage != ''">
+          <h3 class="has-info">{{validMessage}}</h3>
+        </div>
+        <div class="form-group">
+          <label>Campaign Name</label>
+          <input type="text" class="form-control" formControlName="name" required autofocus/>
+        </div>
+        <div class="form-group">
+          <label>Description</label>
+          <input type="text" class="form-control" formControlName="description"/>
+        </div>
+      </form>
+      <div class="form-group">
+        <form [formGroup]="booleanformGroup" (ngSubmit)="submitRegistration()" novalidate>
+          <label>Is currently active?</label>
+          <select class="form-control-select" formControlName="isActive" [(ngModel)]="isActive">
+            <option>true</option>
+            <option>false</option>
+          </select>
+        </form>
+        <button type="submit" class="btn btn-primary" (click)="submitRegistration()" >Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
