--- a/ui/src/app/components/header/header.component.html
+++ b/ui/src/app/components/header/header.component.html
@@ -11,11 +11,11 @@
       <li><a (click)="isUserLoggedIn()">My Account</a></li>
       <li><a (click)="seeShoppingCart()">Cart</a></li>
     </ul>
-    <form class="navbar-form navbar-left">
+    <form class="navbar-form navbar-left" [formGroup]="formGroup">
       <div class="input-group">
-        <input type="text" class="form-control" placeholder="Search" name="search">
+        <input type="text" class="form-control" placeholder="Search" name="search" formControlName="search" [(ngModel)]="keyword">
         <div class="input-group-btn">
-          <button class="btn btn-default" type="submit">
+          <button class="btn btn-default" type="submit" (click)="searchProductsByKeyword()">
             <i class="glyphicon glyphicon-search"></i>
           </button>
         </div>
