--- a/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
+++ b/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
@@ -1,1 +1,30 @@
-<p>product-list-keyword works!</p>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+
+<div class="container" *ngIf="productList && productList.length">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="ibox">
+        <div class="ibox-content product-box" *ngFor="let product of productList">
+          <div class="product-imitation">
+            <img src="https://cdn3.iconfinder.com/data/icons/cat-pattern-colored/94/cat17-512.png" style="height: 150px; width: 150px">
+          </div>
+          <div class="product-desc">
+                    <span class="product-price">
+                        {{product.price}}
+                    </span>
+            <small class="text-muted">Category: {{product.category.name}}</small>
+            <a class="product-name" (click)="seeProduct(product)"> {{product.name}}</a>
+
+            <div class="small m-t-xs">
+              {{product.description}}
+            </div>
+            <div class="m-t text-righ">
+
+              <a (click)="seeProduct(product)" class="btn btn-xs btn-outline btn-primary">Info <i class="fa fa-long-arrow-right"></i> </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
