currently working on campaign price on item instead of regular price, edit price not working

--- a/ui/src/app/components/catagory/catagory.component.html
+++ b/ui/src/app/components/catagory/catagory.component.html
@@ -10,6 +10,7 @@
       </li>
     </ul>
     <ul class="sidebar-nav" id="sidebar">
+      <li [routerLink]="['/product-list/Sale']"><a>On Sale<span class="sub_icon glyphicon glyphicon-link" ></span></a></li>
       <li [routerLink]="['/product-list/IT']"><a>IT<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
       <li [routerLink]="['/product-list/Photography']"><a>Photography<span class="sub_icon glyphicon glyphicon-link"></span></a></li>
       <li [routerLink]="['/product-list/Electrical Appliances']"><a>Electrical Appliances<span class="sub_icon glyphicon glyphicon-link" ></span></a></li>
