--- a/ui/src/app/components/product/edit-product/edit-product.component.html
+++ b/ui/src/app/components/product/edit-product/edit-product.component.html
@@ -3,7 +3,7 @@
     <br>
     <div class="title" style="text-align:center">
       <h1>
-        Create Product
+        Edit Product
       </h1>
     </div>
     <div class="container-form">
