--- a/ui/src/app/components/account/edit-account-emp/edit-account-emp.component.html
+++ b/ui/src/app/components/account/edit-account-emp/edit-account-emp.component.html
@@ -30,6 +30,7 @@
         </form>
       </div>
       <button type="submit" class="btn btn-primary" (click)="submitRegistration()" >Submit</button>
+      <button type="submit" class="btn btn-primary" (click)="deleteAccount()" >Delete</button>
     </div>
   </div>
 </div>
