--- a/ui/src/app/components/product/add-product-to-campaign/add-product-to-campaign.component.html
+++ b/ui/src/app/components/product/add-product-to-campaign/add-product-to-campaign.component.html
@@ -1,1 +1,41 @@
-<p>add-product-to-campaign works!</p>
+<div class="site-wrapper">
+  <div class="text-wrapper">
+    <br>
+    <div class="title" style="text-align:center">
+      <h1>
+        Add Product To Campaign;
+      </h1>
+    </div>
+    <div class="container-form">
+        <div *ngIf="validMessage != ''">
+          <h3 class="has-info">{{validMessage}}</h3>
+        </div>
+        <div class="form-group">
+          <h4>Product Name</h4>
+          {{product.name}}
+        </div>
+        <div class="form-group">
+          <h4>Regular product price:</h4>
+          {{product.price}} BG LEV
+        </div>
+      <form [formGroup]="productFormGroup" (ngSubmit)="submitRegistration()" novalidate>
+        <div class="form-group">
+          <label>Price during campaign</label>
+          <h6>Price must not be less than 50% of regular price of product.</h6>
+          <input type="text" class="form-control" formControlName="price" required value="{{product.price}}"/>
+        </div>
+      </form>
+      <div class="form-group">
+        <form [formGroup]="categoryFormGroup" (ngSubmit)="submitRegistration()" novalidate>
+          <label>Campaigns</label>
+          <select class="form-control-select" formControlName="campaign" [(ngModel)]="campaign">
+            <option>Black Friday</option>
+            <option>Christmas Campaign</option>
+            <option>New Years Campaign</option>
+          </select>
+        </form>
+      </div>
+      <button type="submit" class="btn btn-primary" (click)="submitRegistration()" >Submit</button>
+    </div>
+  </div>
+</div>
