--- a/ui/src/app/components/sales-report/sales-report.component.html
+++ b/ui/src/app/components/sales-report/sales-report.component.html
@@ -18,17 +18,20 @@
         </div>
         <div class="panel-body">
           <div class="row" *ngFor="let item of reportItems">
-            <div class="col-xs-2"><img class="img-responsive" src="https://cdn3.iconfinder.com/data/icons/cat-pattern-colored/94/cat17-512.png">
+            <div class="col-xs-2"><img class="img-responsive"
+                                       src="https://cdn3.iconfinder.com/data/icons/cat-pattern-colored/94/cat17-512.png">
             </div>
             <div class="col-xs-4">
-              <h4 class="product-name" (click)="getProduct(item) "><strong>{{item.product.name}}</strong></h4>
+              <h4 class="product-name"><strong>{{item.productName}}</strong></h4>
             </div>
             <div class="col-xs-6">
-              <div class="col-xs-6 text-right">
-                <h6><strong>{{item.product.price}} <span class="text-muted">x</span></strong></h6>
-              </div>
+              <h6 style="font-weight: bold"> Quantity: </h6>
               <div class="col-xs-4 form-control input-sm">
                 {{item.quantity}}
+              </div>
+              <h6 style="font-weight: bold"> Sum: </h6>
+              <div class="col-xs-4 form-control input-sm">
+                {{item.sum}}
               </div>
             </div>
           </div>
