Can delete products from campaigns and added minimal price in db and everywhere

--- a/ui/src/app/components/campaign/edit-campaign/edit-campaign.component.html
+++ b/ui/src/app/components/campaign/edit-campaign/edit-campaign.component.html
@@ -29,6 +29,7 @@
           </select>
         </form>
         <button type="submit" class="btn btn-primary" (click)="submitRegistration()" >Submit</button>
+        <button type="submit" class="btn btn-primary" (click)="seeproductsInCampaign()" >See Products In This Campaign</button>
       </div>
     </div>
   </div>
