--- a/ui/src/app/components/campaign/edit-product-in-campaign/edit-product-in-campaign.component.html
+++ b/ui/src/app/components/campaign/edit-product-in-campaign/edit-product-in-campaign.component.html
@@ -7,21 +7,25 @@
       </h1>
     </div>
     <div class="container-form">
-        <div *ngIf="validMessage != ''">
-          <h3 class="has-info">{{validMessage}}</h3>
-        </div>
-        <div class="form-group">
-          <h4>Product Name</h4>
-          {{product.name}}
-        </div>
-        <div class="form-group">
-          <h4>Regular product price:</h4>
-          {{product.price}} BG LEV
-        </div>
+      <div *ngIf="validMessage != ''">
+        <h3 class="has-info">{{validMessage}}</h3>
+      </div>
+      <div class="form-group">
+        <h4>Product Name</h4>
+        {{product.name}}
+      </div>
+      <div class="form-group">
+        <h4>Regular product price:</h4>
+        {{product.price}} BG LEV
+      </div>
+      <div class="form-group">
+        <h4>Minimal product price:</h4>
+        {{product.minPrice}} BG LEV
+      </div>
       <form [formGroup]="productFormGroup" (ngSubmit)="submitRegistration()" novalidate>
         <div class="form-group">
           <label>Price during campaign</label>
-          <h6>Price must not be less than 50% of regular price of product.</h6>
+          <h6>Price must not be less than minimal price of product.</h6>
           <input type="text" class="form-control" formControlName="price" required value="{{product.price}}"/>
         </div>
       </form>
