--- a/ui/src/app/components/product/create-product/create-product.component.html
+++ b/ui/src/app/components/product/create-product/create-product.component.html
@@ -24,6 +24,10 @@
           <input type="text" class="form-control" formControlName="price" required/>
         </div>
         <div class="form-group">
+          <label>Product Min Price</label>
+          <input type="text" class="form-control" formControlName="minPrice" required/>
+        </div>
+        <div class="form-group">
           <label>Description</label>
           <input type="text" class="form-control" formControlName="description"/>
         </div>
