--- a/ui/src/app/components/product/edit-product/edit-product.component.html
+++ b/ui/src/app/components/product/edit-product/edit-product.component.html
@@ -20,8 +20,12 @@
           <input type="text" class="form-control" formControlName="quantity" required value="0"/>
         </div>
         <div class="form-group">
-          <label>Edit Price</label>
+          <label>Edit Regular Price</label>
           <input type="text" class="form-control" formControlName="price" required value="{{product.price}}"/>
+        </div>
+        <div class="form-group">
+          <label>Edit Minimal Price</label>
+          <input type="text" class="form-control" formControlName="minPrice" required value="{{product.minPrice}}"/>
         </div>
         <div class="form-group">
           <label>Description</label>
