Fixed Checkout, total price, hardcoded shipping. All lists have titles now and if no products are on sale the message is displayed. Fixed prices on products and now products with campaign prices work.

--- a/ui/src/app/components/product/product-list-sale/product-list-sale.component.css
+++ b/ui/src/app/components/product/product-list-sale/product-list-sale.component.css
@@ -148,6 +148,11 @@ table.shoping-cart-table tr td:last-child {
 }
 .container{
   margin-left: 250px;
-  margin-top:150px;
+  margin-top:20px;
+}
+.title {
+  margin-left: 300px;
+  margin-top:100px;
+  font-weight: bold;
 }
 
