--- a/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
+++ b/ui/src/app/components/product/product-list-keyword/product-list-keyword.component.html
@@ -1,5 +1,8 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
 
+<div class="title">
+  <h1>Keyword: {{keyword}}</h1>
+</div>
 <div class="container" *ngIf="productList && productList.length">
   <div class="row">
     <div class="col-md-3">
