--- a/ui/src/app/components/product/product-list-out-of-stock/product-list-out-of-stock.component.css
+++ b/ui/src/app/components/product/product-list-out-of-stock/product-list-out-of-stock.component.css
@@ -148,6 +148,10 @@ table.shoping-cart-table tr td:last-child {
 }
 .container{
   margin-left: 250px;
-  margin-top:150px;
+  margin-top:20px;
 }
-
+.title {
+  margin-left: 300px;
+  margin-top:100px;
+  font-weight: bold;
+}
