--- a/ui/src/app/components/product/product-list-sale/product-list-sale.component.html
+++ b/ui/src/app/components/product/product-list-sale/product-list-sale.component.html
@@ -1,6 +1,8 @@
 <p>product-list-sale works!</p>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
-
+<div class="title">
+  <h1>{{campaign.message}}</h1>
+</div>
 <div class="container" *ngIf="productList && productList.length">
   <div class="row">
     <div class="col-md-3">
