--- a/ui/src/app/components/product/product-list/product-list.component.html
+++ b/ui/src/app/components/product/product-list/product-list.component.html
@@ -1,4 +1,7 @@
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="title">
+  <h1>{{category}}</h1>
+</div>
 
 <div class="container" *ngIf="productList && productList.length">
   <div class="row">
